# dealflow-challenge

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  app.json  initialize_project.sh  locust.py  pyproject.toml  pytest.ini  run.py  tox.ini
migrations/versions/: 7dd5183b6081_add_freelancer_model.py  e048544a3b01_add_freelancer_model.py
src/dealflow/: __init__.py  config.py  fake.py  schemas.py
src/dealflow/api/freelancers/: __init__.py  business.py  endpoints.py  schemas.py
src/dealflow/models/: freelancer.py
src/dealflow/utils/: result.py
tests/: base_test_case.py  freelancer_model_test.py  pagination_test.py  test_config.py
